// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unknown.vue - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style lang="unknown">
.prettier {
content:
"awesome"
          }
</style>

<script lang="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown" lang="unknown">
prettier.is
                  .awesome(
)
</script>

<template lang="unknown">
    <prettier>
      awesome
</prettier>
</template>

=====================================output=====================================
<style lang="unknown">
.prettier {
content:
"awesome"
          }
</style>

<script lang="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown" lang="unknown">
prettier.is
                  .awesome(
)
</script>

<template lang="unknown">
    <prettier>
      awesome
</prettier>
</template>

================================================================================
`;

exports[`unknown.vue - {"vueIndentScriptAndStyle":true} format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
vueIndentScriptAndStyle: true
                                                                                | printWidth
=====================================input======================================
<style lang="unknown">
.prettier {
content:
"awesome"
          }
</style>

<script lang="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown" lang="unknown">
prettier.is
                  .awesome(
)
</script>

<template lang="unknown">
    <prettier>
      awesome
</prettier>
</template>

=====================================output=====================================
<style lang="unknown">
  .prettier {
  content:
  "awesome"
            }
</style>

<script lang="unknown">
  prettier.is
                    .awesome(
  )
</script>

<script type="unknown">
  prettier.is
                    .awesome(
  )
</script>

<script type="unknown" lang="unknown">
  prettier.is
                    .awesome(
  )
</script>

<template lang="unknown">
    <prettier>
      awesome
</prettier>
</template>

================================================================================
`;

exports[`unknown.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style lang="unknown">
.prettier {
content:
"awesome"
          }
</style>

<script lang="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown" lang="unknown">
prettier.is
                  .awesome(
)
</script>

<template lang="unknown">
    <prettier>
      awesome
</prettier>
</template>

=====================================output=====================================
<style lang="unknown">
.prettier {
content:
"awesome"
          }
</style>

<script lang="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown">
prettier.is
                  .awesome(
)
</script>

<script type="unknown" lang="unknown">
prettier.is
                  .awesome(
)
</script>

<template lang="unknown">
    <prettier>
      awesome
</prettier>
</template>

================================================================================
`;
